# hermes

./: .gitignore  Cargo.toml  LICENSE  README.md  gen-win-stager.sh  generated_stager.ps1  justfile  stager.ps1
.cargo/: config.toml
agent/: Cargo.toml  build.rs
agent/src/: client.rs  error.rs  is_emu.rs  linux.rs  main.rs  windows.rs
agent/src/platform/: linux.rs  mod.rs  windows.rs
c2/: Cargo.toml
c2/migrations/: 20240609105900_hello.down.sql  20240609105900_hello.up.sql
c2/src/: error.rs  jwt.rs  main.rs  routes.rs  services.rs
c2/src/routes/: agents.rs  missions.rs  mod.rs  releases.rs
c2/src/services/: agents.rs  missions.rs  mod.rs  releases.rs
client/: Cargo.toml
client/src/: client.rs  error.rs  main.rs  selection.rs  utils.rs
common/: Cargo.toml
common/src/: api.rs  client.rs  crypto.rs  lib.rs  model.rs
dropper/: Cargo.toml  build.rs  dropper-manifest.rc
dropper/src/: main.rs  packer-keygen.rs  packer.rs
packer/: Cargo.toml  build.rs
packer/src/: main.rs
stager/: Cargo.toml  build.rs
stager/src/: main.rs  win_h.rs
