[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[build-dependencies]
common = { workspace = true }

[dependencies]
# anyhow = { workspace = true }
base64 = { workspace = true }
env_logger = { workspace = true }
# arti-client = { workspace = true }
# arti-hyper = { workspace = true }
common = { workspace = true }
# futures = { workspace = true }
# hyper = { workspace = true }
# dirs = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
obfstr = { workspace = true }
self-replace = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
# tls-api = { workspace = true }
# tls-api-openssl = { workspace = true }
# tokio = { workspace = true }
ureq = { workspace = true }
