[package]
name = "c2"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
tower = { workspace = true }
http-body-util = { workspace = true }

[dependencies]
axum = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
common = { workspace = true }
jsonwebtoken = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
