[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
# anyhow = { workspace = true }
base64 = { workspace = true }
common = { workspace = true }
dialoguer = { workspace = true }
serde_json = { workspace = true }
sha256 = { workspace = true }
thiserror = { workspace = true }
ureq = { workspace = true }
