[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = { workspace = true }
blake2 = { workspace = true }
chacha20poly1305 = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
x25519-dalek = { workspace = true }
zeroize = { workspace = true }
