[package]
name = "packer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agentp"
path = "src/main.rs"

[features]
windows-service = ["dep:windows-service"]

[build-dependencies]
common = { workspace = true }

[dependencies]
common = { workspace = true }
obfstr = { workspace = true }
object = { workspace = true }
rspe = { workspace = true }
self-replace = { workspace = true }
windows-service = { workspace = true, optional = true }
