[package]
name = "packer"
version = "0.1.0"
edition = "2021"

[features]
windows-service = ["dep:windows-service"]

[build-dependencies]
common = { workspace = true }

[dependencies]
common = { workspace = true } # TODO Don't import all common to reduce bin size
rspe = { workspace = true }
windows-service = { workspace = true, optional = true }
